fixed the win logic

--- a/index.html
+++ b/index.html
@@ -28,27 +28,14 @@
             <td class="withborders" id="NumberOfLosses">0</td>
             <td class="withborders" id="GuessesRemaining">10</td>
         </tr>
-        <tr>
-            <td></td>
-            <td class="bigtext">Guess the Dog Breed!</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td id="HiddenWord"></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td class="bigtext">Letters Already Guessed:</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td id="LettersGuessed"></td>
-            <td></td>
-        </tr>
+     
     </table>
+    <div class = "bigtext">Guess the Dog Breed!</div>
+    <div id="HiddenWord"></div>
+    <div class = "bigtext">Letters Already Guessed:</div>
+    <div id="LettersGuessed"></div>
+    <div id="guessedDog"></div>
+
 
 <!-- for testing purposes 
     <h2>
@@ -58,14 +45,6 @@
     </div>
 -->
 
-
-<!-- 
-    <h2>
-        Letters Already Guessed
-    </h2>
-    <div id="LettersGuessed">
-    </div>
--->
     <script src="assets/javascript/game.js"></script>
 
 </body>
